Inclusao do numero de registro no cadastro de voluntarios e da profissao no usuario. Novos testes em todas as funcionalidades. Ainda sem login

--- a/web/view/cadastroAtendimento.twig
+++ b/web/view/cadastroAtendimento.twig
@@ -44,7 +44,7 @@
                     <button type="submit" class="btn btn-primary">
                         <i class="glyphicon glyphicon-ok"> Salvar</i>
                     </button>
-                    <button type="button" class="btn btn-default">
+                    <button type="reset" class="btn btn-default">
                         <i class="glyphicon glyphicon-remove"> Limpar</i>
                     </button>
                 </div>
