--- a/web/view/certificadoParticipacao.twig
+++ b/web/view/certificadoParticipacao.twig
@@ -9,8 +9,8 @@
         <div class="text-center"><img src="{{ asset('logo_casa_sao_jose.jpg', 'img') }}"></div>
         <header><h2 class="text-center">Certificado de Participação</h2></header>
         <p>
-            Certificamos que <b>{{frequencia.turma.pessoa.nome}}</b> participou do curso <b>{{frequencia.turma.acao.nome}}</b> 
-            ministrado na Casa São José (Associação Cristã do Lago Norte - ACLN), Varjão, Brasília-DF, com carga horária de {{frequencia.turma.acao.cargaHoraria}} horas/aula.
+            Certificamos que <b>{{matricula.pessoa.nome}}</b> participou do curso <b>{{matricula.acao.nome}}</b> 
+            ministrado na Casa São José (Associação Cristã do Lago Norte - ACLN), Varjão, Brasília-DF, com carga horária de {{matricula.acao.cargaHoraria}} horas/aula.
         </p>
         <p class="text-center">Brasília, {{"now"|date("d/m/Y")}}</p>
         <p class="text-center col-sm-4">____________ <br /> Presidente da ACLN</p>
