--- a/web/view/cadastroAcao.twig
+++ b/web/view/cadastroAcao.twig
@@ -22,7 +22,7 @@
                         <select class="form-control" name="local" required>
                             <option value="">Selecione</option>
                             {% for local in locais %}
-                            <option value="{{ local.id }}" {% if acao is defined and acao.local.id == publico.id %} selected {% endif %}>{{ local.descricao }}</option>
+                            <option value="{{ local.id }}" {% if acao is defined and acao.local.id == local.id %} selected {% endif %}>{{ local.descricao }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group col-sm-12">
                         <label for="proposito">Propósito</label>
-                        <textarea class="form-control" name="proposito" rows="5" placeholder="Empoderar e trabalhar a autoestima por meio da dança" required>{% if voluntario is defined %}{{ acao.proposito }}{% endif %}</textarea>
+                        <textarea class="form-control" name="proposito" rows="5" placeholder="Empoderar e trabalhar a autoestima por meio da dança" required>{% if acao is defined %}{{ acao.proposito }}{% endif %}</textarea>
                     </div>
                     <div class="clearfix"></div>
                     <div class="form-group col-sm-3">
@@ -87,8 +87,8 @@
                         </select>
                     </div>
                     <div class="form-group col-sm-1">
-                        <label for="horario">Horas</label>
-                        <input type="time" name="carga_horaria" class="form-control" placeholder="99" value="{% if acao is defined %}{{acao.cargaHoaria}}{% endif %}">
+                        <label for="carga_horaria">Horas</label>
+                        <input type="time" name="carga_horaria" class="form-control" placeholder="99" value="{% if acao is defined %}{{acao.cargaHoraria}}{% endif %}">
                     </div>
                     <div class="form-group col-sm-2">
                         <label for="dia" class="form-check-label">Dia</label><br />
