Inclusao do usuario logado em todos os formularios e a gravacao em todos os metodos de persistencia nos campos de auditoria

--- a/web/view/cadastroFrequencia.twig
+++ b/web/view/cadastroFrequencia.twig
@@ -111,6 +111,7 @@
                         <i class="glyphicon glyphicon-remove"> Limpar</i>
                     </button>
                 </div>
+                <input type="hidden" id="usuario" name="usuario" value="{{ app.user.username }}">
             </form>
         </div>
     </div>
