--- a/web/view/cadastroTipo.twig
+++ b/web/view/cadastroTipo.twig
@@ -32,6 +32,7 @@
                     </div>
                 </fieldset>
                 <input type="hidden" name="id" value="{% if tipo is defined %}{{tipo.id}}{% endif %}">
+                <input type="hidden" id="usuario" name="usuario" value="{{ app.user.username }}">
             </form>
             {% if resultado is defined %}
             <div class="col-sm-12 text-center alert alert-success">
