--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -102,7 +102,7 @@
 <!-- Footer -->
 <footer>
     <p class="copyright text-muted">Associação Cristã do Lago Norte - ACLN - 2018</p>
-    <p class="copyright text-muted">Olá {{ user.username }}!</p>
+    <p class="copyright text-muted">Olá {{ app.user.username }}!</p>
 </footer>
 {% endblock %}
     <!-- jQuery -->
