--- a/web/view/cadastroAcao.twig
+++ b/web/view/cadastroAcao.twig
@@ -136,6 +136,7 @@
                     </button>
                 </div>
                 <input type="hidden" id="id" name="id" value="{% if acao is defined %}{{ acao.id }}{% endif %}">
+                <input type="hidden" id="usuario" name="usuario" value="{{ app.user.username }}">
             </form>
         </div>
         {% if resultado is defined %}
