--- a/web/view/cadastroAtendimento.twig
+++ b/web/view/cadastroAtendimento.twig
@@ -49,6 +49,7 @@
                     </button>
                 </div>
                 <input type="hidden" id="id" name="id" value="{% if atendimento is defined %}{{ atendimento.id }}{% endif %}">
+                <input type="hidden" id="usuario" name="usuario" value="{{ app.user.username }}">
             </form>
         </div>
         {% if resultado is defined %}
