--- a/web/view/cadastroTipo.twig
+++ b/web/view/cadastroTipo.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row col-sm-8 col-sm-offset-2">
             <header>
-                <h2><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>Configuração</h2>
+                <h2><span class="fa fa-wrench" aria-hidden="true"></span> Configuração</h2>
                 <span>ex: voluntário, responsável, menor, administrativo, gestor</span>
             </header>
         </div>
